src/app/globals.css
@import "tailwindcss";

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #FEFEFE;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

html, body, #__next {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #FEFEFE; 
  color: white;
}

:root {
  --color-blue: #2563eb; /* blue-600 */
  --color-blue-light: #dbeafe; /* blue-100 */
  --color-green: #22c55e; /* green-500 */
  --color-green-light: #bbf7d0; /* green-100 */
}

::-webkit-scrollbar {
  width: 6px;
}

